--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@
 
 buildscript {
     ext.kotlin_version = '1.6.21'
+    ext.hilt_version = '2.41'
     repositories {
         google()
         mavenCentral()
@@ -14,6 +15,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
